# Deita

./: .gitignore  ARCHITECTURE.md  IMPLEMENTATION.md  Makefile  PR_SUMMARY.md  README.md  TESTING.md  docker-compose.yml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.dev.yml
.github/: copilot-instructions.md
.github/workflows/: backend-docker.yml  ci.yml  deploy.yml  frontend-docker.yml
ansible/: ansible.cfg  deploy.sh  deploy.yml  inventory.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  WORKSPACE_API.md  alembic.ini  demo_workspace_api.py  pyproject.toml  validate_workspace_api.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  admin.py  auth.py  health.py  utils.py  workspace.py  workspaces.py
backend/app/core/: __init__.py  auth.py  config.py  database.py  scheduler.py
backend/app/models/: __init__.py  chat_message.py  file.py  query.py  saved_query.py  user.py  workspace.py
backend/app/schemas/: __init__.py  auth.py  chat_message.py  file.py  health.py  query.py  saved_query.py  user.py  workspace.py
backend/app/services/: __init__.py  ai_service.py  audit.py  auth.py  auth_service.py  background_jobs.py  chat_service.py  email_service.py  exceptions.py  file_storage.py  query_service.py  user_service.py  workspace.py  workspace_cleanup_service.py  workspace_service.py
backend/app/tests/: __init__.py  conftest.py  test_ai_service_chat.py  test_auth_endpoints.py  test_chat_service.py  test_delete_file_endpoint.py  test_delete_query_endpoint.py  test_file_storage.py  test_file_storage_service.py  test_health.py  test_list_queries_endpoint.py  test_query_service.py  test_save_query_endpoint.py  test_saved_queries_endpoints.py  test_upload_file.py  test_upload_file_endpoint.py  test_workspace.py  test_workspace_cleanup_service.py  test_workspace_files.py  test_workspace_files_endpoint.py  test_workspace_service.py  test_workspaces.py  test_workspaces_endpoints.py
backend/migrations/: env.py
backend/migrations/versions/: 001_initial_create_users_table.py  002_add_workspaces.py  002_add_workspaces_and_files.py  002_workspace_tables.py  003_add_files.py  004_add_queries.py  004_add_saved_queries.py  2025_10_03_0957-ffa3cc0330b3_add_row_count_column_to_files_table.py  2025_10_03_1014-8d748dd07d74_merge_queries_and_row_count_migrations.py  2025_10_13_1632-5784a3d07772_add_chat_messages_table.py
docs/: 01-system-architecture.md  02-technology-stack.md  03-data-model-design.md  04-api-design.md  05-service-boundaries.md  06-performance-scalability.md  07-security.md  08-development-best-practices.md  09-deployment-best-practices.md  10-risk-assessment-technical-debt.md  11-dev-environment.md  12-workspace-cleanup-system.md  magic-link-auth-implementation.md  prd.md
finalproject-ACC/: prompts.md  readme.md
frontend/: .dockerignore  .env.example  .eslintrc.json  Dockerfile  README.md  REFACTORING.md  index.html  jest.config.cjs  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
(+45 files in other folders)
